src/parser/SivertParser.cpp

// Generated from SivertParser.g4 by ANTLR 4.13.1


#include "SivertParserListener.h"

#include "SivertParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SivertParserStaticData final {
  SivertParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SivertParserStaticData(const SivertParserStaticData&) = delete;
  SivertParserStaticData(SivertParserStaticData&&) = delete;
  SivertParserStaticData& operator=(const SivertParserStaticData&) = delete;
  SivertParserStaticData& operator=(SivertParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sivertparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SivertParserStaticData *sivertparserParserStaticData = nullptr;

void sivertparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sivertparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(sivertparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SivertParserStaticData>(
    std::vector<std::string>{
      "start_", "chunk", "block", "stat", "attnamelist", "attrib", "retstat", 
      "label", "funcname", "varlist", "namelist", "explist", "exp", "var", 
      "prefixexp", "functioncall", "args", "functiondef", "funcbody", "parlist", 
      "tableconstructor", "fieldlist", "field", "fieldsep", "number", "string"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", 
      "'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", 
      "','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", 
      "'continue'", "'::'", "'nil'", "'false'", "'true'", "'.'", "'~'", 
      "'-'", "'#'", "'('", "')'", "'not'", "'<<'", "'>>'", "'&'", "'//'", 
      "'%'", "':'", "'<='", "'>='", "'and'", "'or'", "'+'", "'*'", "'{'", 
      "'}'", "'['", "']'", "'=='", "'..'", "'|'", "'^'", "'/'", "'...'", 
      "'~='"
    },
    std::vector<std::string>{
      "", "SEMI", "EQ", "BREAK", "GOTO", "DO", "END", "WHILE", "REPEAT", 
      "UNTIL", "IF", "THEN", "ELSEIF", "ELSE", "FOR", "COMMA", "IN", "FUNCTION", 
      "LOCAL", "LT", "GT", "RETURN", "CONTINUE", "CC", "NIL", "FALSE", "TRUE", 
      "DOT", "SQUIG", "MINUS", "POUND", "OP", "CP", "NOT", "LL", "GG", "AMP", 
      "SS", "PER", "COL", "LE", "GE", "AND", "OR", "PLUS", "STAR", "OCU", 
      "CCU", "OB", "CB", "EE", "DD", "PIPE", "CARET", "SLASH", "DDD", "SQEQ", 
      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", 
      "FLOAT", "HEX_FLOAT", "COMMENT", "WS", "NL", "SHEBANG"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sivertparserParserStaticData = staticData.release();
}

}

SivertParser::SivertParser(TokenStream *input) : SivertParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SivertParser::SivertParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SivertParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sivertparserParserStaticData->atn, sivertparserParserStaticData->decisionToDFA, sivertparserParserStaticData->sharedContextCache, options);
}

SivertParser::~SivertParser() {
  delete _interpreter;
}

const atn::ATN& SivertParser::getATN() const {
  return *sivertparserParserStaticData->atn;
}

std::string SivertParser::getGrammarFileName() const {
  return "SivertParser.g4";
}

const std::vector<std::string>& SivertParser::getRuleNames() const {
  return sivertparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& SivertParser::getVocabulary() const {
  return sivertparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SivertParser::getSerializedATN() const {
  return sivertparserParserStaticData->serializedATN;
}


//----------------- Start_Context ------------------------------------------------------------------

SivertParser::Start_Context::Start_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SivertParser::ChunkContext* SivertParser::Start_Context::chunk() {
  return getRuleContext<SivertParser::ChunkContext>(0);
}

tree::TerminalNode* SivertParser::Start_Context::EOF() {
  return getToken(SivertParser::EOF, 0);
}


size_t SivertParser::Start_Context::getRuleIndex() const {
  return SivertParser::RuleStart_;
}

void SivertParser::Start_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart_(this);
}

void SivertParser::Start_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart_(this);
}

SivertParser::Start_Context* SivertParser::start_() {
  Start_Context *_localctx = _tracker.createInstance<Start_Context>(_ctx, getState());
  enterRule(_localctx, 0, SivertParser::RuleStart_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    chunk();
    setState(53);
    match(SivertParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChunkContext ------------------------------------------------------------------

SivertParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SivertParser::BlockContext* SivertParser::ChunkContext::block() {
  return getRuleContext<SivertParser::BlockContext>(0);
}


size_t SivertParser::ChunkContext::getRuleIndex() const {
  return SivertParser::RuleChunk;
}

void SivertParser::ChunkContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChunk(this);
}

void SivertParser::ChunkContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChunk(this);
}

SivertParser::ChunkContext* SivertParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 2, SivertParser::RuleChunk);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

SivertParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SivertParser::StatContext *> SivertParser::BlockContext::stat() {
  return getRuleContexts<SivertParser::StatContext>();
}

SivertParser::StatContext* SivertParser::BlockContext::stat(size_t i) {
  return getRuleContext<SivertParser::StatContext>(i);
}

SivertParser::RetstatContext* SivertParser::BlockContext::retstat() {
  return getRuleContext<SivertParser::RetstatContext>(0);
}


size_t SivertParser::BlockContext::getRuleIndex() const {
  return SivertParser::RuleBlock;
}

void SivertParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void SivertParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

SivertParser::BlockContext* SivertParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, SivertParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(60);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(57);
        stat(); 
      }
      setState(62);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6291464) != 0)) {
      setState(63);
      retstat();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

SivertParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SivertParser::StatContext::SEMI() {
  return getToken(SivertParser::SEMI, 0);
}

SivertParser::VarlistContext* SivertParser::StatContext::varlist() {
  return getRuleContext<SivertParser::VarlistContext>(0);
}

tree::TerminalNode* SivertParser::StatContext::EQ() {
  return getToken(SivertParser::EQ, 0);
}

SivertParser::ExplistContext* SivertParser::StatContext::explist() {
  return getRuleContext<SivertParser::ExplistContext>(0);
}

SivertParser::FunctioncallContext* SivertParser::StatContext::functioncall() {
  return getRuleContext<SivertParser::FunctioncallContext>(0);
}

SivertParser::LabelContext* SivertParser::StatContext::label() {
  return getRuleContext<SivertParser::LabelContext>(0);
}

tree::TerminalNode* SivertParser::StatContext::BREAK() {
  return getToken(SivertParser::BREAK, 0);
}

tree::TerminalNode* SivertParser::StatContext::GOTO() {
  return getToken(SivertParser::GOTO, 0);
}

tree::TerminalNode* SivertParser::StatContext::NAME() {
  return getToken(SivertParser::NAME, 0);
}

tree::TerminalNode* SivertParser::StatContext::DO() {
  return getToken(SivertParser::DO, 0);
}

std::vector<SivertParser::BlockContext *> SivertParser::StatContext::block() {
  return getRuleContexts<SivertParser::BlockContext>();
}

SivertParser::BlockContext* SivertParser::StatContext::block(size_t i) {
  return getRuleContext<SivertParser::BlockContext>(i);
}

tree::TerminalNode* SivertParser::StatContext::END() {
  return getToken(SivertParser::END, 0);
}

tree::TerminalNode* SivertParser::StatContext::WHILE() {
  return getToken(SivertParser::WHILE, 0);
}

std::vector<SivertParser::ExpContext *> SivertParser::StatContext::exp() {
  return getRuleContexts<SivertParser::ExpContext>();
}

SivertParser::ExpContext* SivertParser::StatContext::exp(size_t i) {
  return getRuleContext<SivertParser::ExpContext>(i);
}

tree::TerminalNode* SivertParser::StatContext::REPEAT() {
  return getToken(SivertParser::REPEAT, 0);
}

tree::TerminalNode* SivertParser::StatContext::UNTIL() {
  return getToken(SivertParser::UNTIL, 0);
}

tree::TerminalNode* SivertParser::StatContext::IF() {
  return getToken(SivertParser::IF, 0);
}

std::vector<tree::TerminalNode *> SivertParser::StatContext::THEN() {
  return getTokens(SivertParser::THEN);
}

tree::TerminalNode* SivertParser::StatContext::THEN(size_t i) {
  return getToken(SivertParser::THEN, i);
}

std::vector<tree::TerminalNode *> SivertParser::StatContext::ELSEIF() {
  return getTokens(SivertParser::ELSEIF);
}

tree::TerminalNode* SivertParser::StatContext::ELSEIF(size_t i) {
  return getToken(SivertParser::ELSEIF, i);
}

tree::TerminalNode* SivertParser::StatContext::ELSE() {
  return getToken(SivertParser::ELSE, 0);
}

tree::TerminalNode* SivertParser::StatContext::FOR() {
  return getToken(SivertParser::FOR, 0);
}

std::vector<tree::TerminalNode *> SivertParser::StatContext::COMMA() {
  return getTokens(SivertParser::COMMA);
}

tree::TerminalNode* SivertParser::StatContext::COMMA(size_t i) {
  return getToken(SivertParser::COMMA, i);
}

SivertParser::NamelistContext* SivertParser::StatContext::namelist() {
  return getRuleContext<SivertParser::NamelistContext>(0);
}

tree::TerminalNode* SivertParser::StatContext::IN() {
  return getToken(SivertParser::IN, 0);
}

tree::TerminalNode* SivertParser::StatContext::FUNCTION() {
  return getToken(SivertParser::FUNCTION, 0);
}

SivertParser::FuncnameContext* SivertParser::StatContext::funcname() {
  return getRuleContext<SivertParser::FuncnameContext>(0);
}

SivertParser::FuncbodyContext* SivertParser::StatContext::funcbody() {
  return getRuleContext<SivertParser::FuncbodyContext>(0);
}

tree::TerminalNode* SivertParser::StatContext::LOCAL() {
  return getToken(SivertParser::LOCAL, 0);
}

SivertParser::AttnamelistContext* SivertParser::StatContext::attnamelist() {
  return getRuleContext<SivertParser::AttnamelistContext>(0);
}


size_t SivertParser::StatContext::getRuleIndex() const {
  return SivertParser::RuleStat;
}

void SivertParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void SivertParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

SivertParser::StatContext* SivertParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 6, SivertParser::RuleStat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(147);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(66);
      match(SivertParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      varlist();
      setState(68);
      match(SivertParser::EQ);
      setState(69);
      explist();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(71);
      functioncall(0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(72);
      label();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(73);
      match(SivertParser::BREAK);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(74);
      match(SivertParser::GOTO);
      setState(75);
      match(SivertParser::NAME);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(76);
      match(SivertParser::DO);
      setState(77);
      block();
      setState(78);
      match(SivertParser::END);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(80);
      match(SivertParser::WHILE);
      setState(81);
      exp(0);
      setState(82);
      match(SivertParser::DO);
      setState(83);
      block();
      setState(84);
      match(SivertParser::END);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(86);
      match(SivertParser::REPEAT);
      setState(87);
      block();
      setState(88);
      match(SivertParser::UNTIL);
      setState(89);
      exp(0);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(91);
      match(SivertParser::IF);
      setState(92);
      exp(0);
      setState(93);
      match(SivertParser::THEN);
      setState(94);
      block();
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SivertParser::ELSEIF) {
        setState(95);
        match(SivertParser::ELSEIF);
        setState(96);
        exp(0);
        setState(97);
        match(SivertParser::THEN);
        setState(98);
        block();
        setState(104);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(107);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SivertParser::ELSE) {
        setState(105);
        match(SivertParser::ELSE);
        setState(106);
        block();
      }
      setState(109);
      match(SivertParser::END);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(111);
      match(SivertParser::FOR);
      setState(112);
      match(SivertParser::NAME);
      setState(113);
      match(SivertParser::EQ);
      setState(114);
      exp(0);
      setState(115);
      match(SivertParser::COMMA);
      setState(116);
      exp(0);
      setState(119);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SivertParser::COMMA) {
        setState(117);
        match(SivertParser::COMMA);
        setState(118);
        exp(0);
      }
      setState(121);
      match(SivertParser::DO);
      setState(122);
      block();
      setState(123);
      match(SivertParser::END);
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(125);
      match(SivertParser::FOR);
      setState(126);
      namelist();
      setState(127);
      match(SivertParser::IN);
      setState(128);
      explist();
      setState(129);
      match(SivertParser::DO);
      setState(130);
      block();
      setState(131);
      match(SivertParser::END);
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(133);
      match(SivertParser::FUNCTION);
      setState(134);
      funcname();
      setState(135);
      funcbody();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(137);
      match(SivertParser::LOCAL);
      setState(138);
      match(SivertParser::FUNCTION);
      setState(139);
      match(SivertParser::NAME);
      setState(140);
      funcbody();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(141);
      match(SivertParser::LOCAL);
      setState(142);
      attnamelist();
      setState(145);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SivertParser::EQ) {
        setState(143);
        match(SivertParser::EQ);
        setState(144);
        explist();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttnamelistContext ------------------------------------------------------------------

SivertParser::AttnamelistContext::AttnamelistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SivertParser::AttnamelistContext::NAME() {
  return getTokens(SivertParser::NAME);
}

tree::TerminalNode* SivertParser::AttnamelistContext::NAME(size_t i) {
  return getToken(SivertParser::NAME, i);
}

std::vector<SivertParser::AttribContext *> SivertParser::AttnamelistContext::attrib() {
  return getRuleContexts<SivertParser::AttribContext>();
}

SivertParser::AttribContext* SivertParser::AttnamelistContext::attrib(size_t i) {
  return getRuleContext<SivertParser::AttribContext>(i);
}

std::vector<tree::TerminalNode *> SivertParser::AttnamelistContext::COMMA() {
  return getTokens(SivertParser::COMMA);
}

tree::TerminalNode* SivertParser::AttnamelistContext::COMMA(size_t i) {
  return getToken(SivertParser::COMMA, i);
}


size_t SivertParser::AttnamelistContext::getRuleIndex() const {
  return SivertParser::RuleAttnamelist;
}

void SivertParser::AttnamelistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttnamelist(this);
}

void SivertParser::AttnamelistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttnamelist(this);
}

SivertParser::AttnamelistContext* SivertParser::attnamelist() {
  AttnamelistContext *_localctx = _tracker.createInstance<AttnamelistContext>(_ctx, getState());
  enterRule(_localctx, 8, SivertParser::RuleAttnamelist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    match(SivertParser::NAME);
    setState(150);
    attrib();
    setState(156);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SivertParser::COMMA) {
      setState(151);
      match(SivertParser::COMMA);
      setState(152);
      match(SivertParser::NAME);
      setState(153);
      attrib();
      setState(158);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttribContext ------------------------------------------------------------------

SivertParser::AttribContext::AttribContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SivertParser::AttribContext::LT() {
  return getToken(SivertParser::LT, 0);
}

tree::TerminalNode* SivertParser::AttribContext::NAME() {
  return getToken(SivertParser::NAME, 0);
}

tree::TerminalNode* SivertParser::AttribContext::GT() {
  return getToken(SivertParser::GT, 0);
}


size_t SivertParser::AttribContext::getRuleIndex() const {
  return SivertParser::RuleAttrib;
}

void SivertParser::AttribContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttrib(this);
}

void SivertParser::AttribContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttrib(this);
}

SivertParser::AttribContext* SivertParser::attrib() {
  AttribContext *_localctx = _tracker.createInstance<AttribContext>(_ctx, getState());
  enterRule(_localctx, 10, SivertParser::RuleAttrib);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SivertParser::LT) {
      setState(159);
      match(SivertParser::LT);
      setState(160);
      match(SivertParser::NAME);
      setState(161);
      match(SivertParser::GT);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetstatContext ------------------------------------------------------------------

SivertParser::RetstatContext::RetstatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SivertParser::RetstatContext::RETURN() {
  return getToken(SivertParser::RETURN, 0);
}

tree::TerminalNode* SivertParser::RetstatContext::BREAK() {
  return getToken(SivertParser::BREAK, 0);
}

tree::TerminalNode* SivertParser::RetstatContext::CONTINUE() {
  return getToken(SivertParser::CONTINUE, 0);
}

tree::TerminalNode* SivertParser::RetstatContext::SEMI() {
  return getToken(SivertParser::SEMI, 0);
}

SivertParser::ExplistContext* SivertParser::RetstatContext::explist() {
  return getRuleContext<SivertParser::ExplistContext>(0);
}


size_t SivertParser::RetstatContext::getRuleIndex() const {
  return SivertParser::RuleRetstat;
}

void SivertParser::RetstatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRetstat(this);
}

void SivertParser::RetstatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRetstat(this);
}

SivertParser::RetstatContext* SivertParser::retstat() {
  RetstatContext *_localctx = _tracker.createInstance<RetstatContext>(_ctx, getState());
  enterRule(_localctx, 12, SivertParser::RuleRetstat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SivertParser::RETURN: {
        setState(164);
        match(SivertParser::RETURN);
        setState(166);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (((((_la - 17) & ~ 0x3fULL) == 0) &&
          ((1ULL << (_la - 17)) & 280650879957889) != 0)) {
          setState(165);
          explist();
        }
        break;
      }

      case SivertParser::BREAK: {
        setState(168);
        match(SivertParser::BREAK);
        break;
      }

      case SivertParser::CONTINUE: {
        setState(169);
        match(SivertParser::CONTINUE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(173);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SivertParser::SEMI) {
      setState(172);
      match(SivertParser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabelContext ------------------------------------------------------------------

SivertParser::LabelContext::LabelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SivertParser::LabelContext::CC() {
  return getTokens(SivertParser::CC);
}

tree::TerminalNode* SivertParser::LabelContext::CC(size_t i) {
  return getToken(SivertParser::CC, i);
}

tree::TerminalNode* SivertParser::LabelContext::NAME() {
  return getToken(SivertParser::NAME, 0);
}


size_t SivertParser::LabelContext::getRuleIndex() const {
  return SivertParser::RuleLabel;
}

void SivertParser::LabelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabel(this);
}

void SivertParser::LabelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SivertParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLabel(this);
}

SivertParser::LabelContext* SivertParser::label() {
  LabelContext *_localctx = _tracker.createInstance<LabelContext>(_ctx, getState());
  enterRule(_localctx, 14, SivertParser::RuleLabel);
